# redback-orion

./: .gitignore  Accelerometer_KalmanFilter_code.ino  Accelerometer_boundary_detection.ino  Acclerometer_secure_code.ino  Cybersecurity part 2.docx  OAUTH_SETUP.md  PiCamServer.py  README.md  Small_detection_YOLO_and_SAHI.ipynb  Team_project_mindmap  annotation_sync.py  csv.js  ersSardarredback-orionPlayer_Trackingafl_player_tracking_and_crowd_monitoringfrontend  event_timing_analysis.py  index.html  kalman_filter2.ino  package-lock.json  package.json  pi_cam_testing.py  pi_cam_testing_final.py  pnpm-lock.yaml  prediction_vs_truth.py  publish_pi_cam.py  pyhton_pi_cam.py  sonar-project.properties  subscribe_pi_cam.py  tailwind.config.ts  vector_values.ino
DSM(PT)007/: .gitignore  Player_tracking_YOLOv9 (1).ipynb  Speed_estimation.ipynb
Documentation_Sohil/: Comparative Analysis Report.docx  Oximeter technology.docx
IOT_HRS/: Combine code for heart rate+GPS+Oximeter.ino  GPS_HEART_RATE.ino
IOT_SPO2/: SPO2_data_MAX30102 2.csv
Internet_of_Things/: Accelerometer_KalmanFilter_code.ino  Accelerometer_boundary_detection.ino  PiCamServer.py  README.md  (+4 more)
data_streaming_backend/: .gitignore  README.md  api.py  detect_faces_and_features.py  dot_env_example  pyproject.toml  requirements.txt
data_streaming_backend/airflow/dags/: Face_detection.py  example_dag.py  heatmaps_kafka.py  kafka_requirements.txt  object_detection_blob_to_kafka.py  requirements.txt  venv_example_requirements.txt.py
data_streaming_backend/kafka-tutorials/: app.py  video_consumer.py  video_producer.py
(+2772 files in other folders)
