[project]
name = "kafka-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.9.0",
    "fastapi>=0.115.12",
    "kafka-python>=2.1.3",
    "kombu>=5.5.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyaudio>=0.2.14",
]
